--- a/index.html
+++ b/index.html
@@ -10,12 +10,42 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/icomoon/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   </head>
   <body>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    
+    <div class="header">
+      <div class="header-image"><img src="assets/images/bio-square.jpg" alt="" /></div>
+      <div class="title">The Inward Spiral</div>
+      <div class="social">
+        <a href="https://facebook.com/theinwardspiral"><div class="social-icon"><i class="fab fa-facebook-f fa-2x"></i></div></a>
+        <a href="https://twitter.com/spiral_inward"><div class="social-icon"><i class="fab fa-twitter fa-2x"></i></div></a>
+        <a href="https://www.youtube.com/channel/UC_yZofN6BM5xsoHaVxQ-QFQ"><div class="social-icon"><i class="fab fa-youtube fa-2x"></i></div></a>
+      </div>
+    </div>
+    <div class="content">
+      <div class="video">
+        <iframe width="600" height="338" src="https://www.youtube.com/embed/rMOtHx0vna4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="buy-now">
+        <div class="tagline">
+          New Album<br />
+          <span class="album">Reentry</span> <br />
+          Available on all major platforms
+        </div>
+        <div class="links">
+          <a href="https://itunes.apple.com/us/album/reentry/1449060964" alt="Apple Music"><i class="fab fa-apple"></i></a>
+          <a href="https://play.google.com/store/music/album/The_Inward_Spiral_Reentry?id=Bf5yyitok5qw7lksb6vhj2j6jxe"><i class="fab fa-google-play"></i></a>
+          <a href="https://open.spotify.com/album/67rJAAmIDzCtlcwZ4UwYx4"><i class="fab fa-spotify"></i></a>
+          <a href="https://pandora.com"><i class="icon-pandora"></i></a>
+          <a href="https://smile.amazon.com/Reentry-Inward-Spiral/dp/B07MJHJL4H/"><i class="fab fa-amazon"></i></a>
+        </div>
+      </div>
+      <div class="footer">&copy; 2019 Dave Gammage</div>
+    </div>
     <script src="assets/js/scripts.js" async defer></script>
   </body>
 </html>
