More and more responsiveness.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>The Inward Spiral</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/icomoon/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -44,7 +40,10 @@
           <a href="https://smile.amazon.com/Reentry-Inward-Spiral/dp/B07MJHJL4H/"><i class="fab fa-amazon"></i></a>
         </div>
       </div>
-      <div class="footer">&copy; 2019 Dave Gammage</div>
+      <div class="footer">
+        &copy; 2019 Dave Gammage<br />
+        <a href="https://github.com/omfgtora">Website made with ❤️</a>
+      </div>
     </div>
     <script src="assets/js/scripts.js" async defer></script>
   </body>
