--- a/README.html
+++ b/README.html
@@ -7,6 +7,7 @@
         <hr>
 <h2 id="permalink-index-html">permalink: /index.html</h2>
 <h1 id="the-inward-spiral">The Inward Spiral</h1>
+<p><a href="https://theinwardspiralmusic.com">https://theinwardspiralmusic.com</a></p>
 
       </body>
     </html>
