--- a/README.html
+++ b/README.html
@@ -5,9 +5,7 @@
       </head>
       <body>
         <h1 id="the-inward-spiral">The Inward Spiral</h1>
-<p><a href="https://theinwardspiralmusic.com">https://theinwardspiralmusic.com</a></p>
-<hr>
-<h2 id="permalink-index-html">permalink: /index.html</h2>
+<h2 id="https-theinwardspiralmusic-com"><a href="https://theinwardspiralmusic.com">https://theinwardspiralmusic.com</a></h2>
 
       </body>
     </html>
