--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </div>
       <div class="buy-now">
         <div class="tagline">
-          New Album<br />
-          <span class="album">Reentry</span> <br />
+          New Album
+          <div class="album">Reentry</div>
           Available on all major platforms
         </div>
         <div class="links">
@@ -41,8 +41,8 @@
         </div>
       </div>
       <div class="footer">
-        &copy; 2019 Dave Gammage<br />
-        <a href="https://github.com/omfgtora">Website made with ❤️</a>
+        &copy; 2019 Dave Gammage
+        <a href="https://github.com/omfgtora"> <div class="❤️">Website made with ❤️</div> </a>
       </div>
     </div>
     <script src="assets/js/scripts.js" async defer></script>
