Added javascript to load youtube embed on click

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </div>
     <div class="content">
       <div class="video">
-        <iframe width="600" height="338" src="https://www.youtube.com/embed/rMOtHx0vna4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- <iframe width="600" height="338" src="https://www.youtube.com/embed/rMOtHx0vna4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        <div class="youtube-player" data-id="rMOtHx0vna4"></div>
       </div>
       <div class="buy-now">
         <div class="tagline">
