--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     </div>
     <div class="content">
       <div class="video">
-        <!-- <iframe width="600" height="338" src="https://www.youtube.com/embed/rMOtHx0vna4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        <a id="prev" class="fas fa-angle-left"></a>
         <div class="youtube-player" data-id="rMOtHx0vna4"></div>
+        <a id="next" class="fas fa-angle-right"></a>
       </div>
       <div class="buy-now">
         <div class="tagline">
