Quick fix for mobile. Hides carousel controls... for now

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="content">
       <div class="video">
         <a id="prev" class="fas fa-angle-left"></a>
-        <div class="youtube-player" data-id="rMOtHx0vna4"></div>
+        <div class="youtube-player"></div>
         <a id="next" class="fas fa-angle-right"></a>
       </div>
       <div class="buy-now">
