--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>The Inward Spiral</title>
-    <meta name="description" content="">
+    <meta name="description" content="The official homepage for The Inward Spiral - Music by Dave Gammage - Genres: Chill, Downtempo, Ambient">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/icomoon/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/styles.css" defer>
+    <link rel="stylesheet" href="assets/icomoon/style.css" defer>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" defer>
   </head>
 
   <body>
-    <div class="header">
-      <div class="header-image"><img src="assets/images/bio-square.jpg" alt="" /></div>
+    <header class="header">
+      <div class="header-image"><img src="assets/images/bio-square.jpg" /></div>
 
       <div class="title">The Inward Spiral</div>
-      
-      <div class="social">
-        <a href="https://facebook.com/theinwardspiral"><div class="social-icon"><i class="fab fa-facebook-f fa-2x"></i></div></a>
-        <a href="https://twitter.com/spiral_inward"><div class="social-icon"><i class="fab fa-twitter fa-2x"></i></div></a>
-        <a href="https://www.youtube.com/channel/UC_yZofN6BM5xsoHaVxQ-QFQ"><div class="social-icon"><i class="fab fa-youtube fa-2x"></i></div></a>
-      </div>
-    </div>
 
-    <div class="content">
+      <div class="social">
+        <a href="https://facebook.com/theinwardspiral" aria-label="Facebook link"><div class="social-icon"><i class="fab fa-facebook-f fa-2x"></i></div></a>
+        <a href="https://twitter.com/spiral_inward" aria-label="Twitter link"><div class="social-icon"><i class="fab fa-twitter fa-2x"></i></div></a>
+        <a href="https://www.youtube.com/channel/UC_yZofN6BM5xsoHaVxQ-QFQ" aria-label="YouTube link"><div class="social-icon"><i class="fab fa-youtube fa-2x"></i></div></a>
+      </div>
+    </header>
+
+    <main class="content">
       <div class="video">
         <a id="prev" class="fas fa-angle-left"></a>
         <div class="youtube-player"></div>
@@ -38,20 +39,20 @@
         </div>
 
         <div class="links">
-          <a href="https://itunes.apple.com/us/album/reentry/1449060964" alt="Apple Music"><i class="fab fa-apple"></i></a>
-          <a href="https://play.google.com/store/music/album/The_Inward_Spiral_Reentry?id=Bf5yyitok5qw7lksb6vhj2j6jxe"><i class="fab fa-google-play"></i></a>
-          <a href="https://open.spotify.com/album/67rJAAmIDzCtlcwZ4UwYx4"><i class="fab fa-spotify"></i></a>
-          <a href="https://pandora.com"><i class="icon-pandora"></i></a>
-          <a href="https://smile.amazon.com/Reentry-Inward-Spiral/dp/B07MJHJL4H/"><i class="fab fa-amazon"></i></a>
+          <a href="https://itunes.apple.com/us/album/reentry/1449060964" alt="Apple Music" aria-label="Buy from Apple Music"><i class="fab fa-apple"></i></a>
+          <a href="https://play.google.com/store/music/album/The_Inward_Spiral_Reentry?id=Bf5yyitok5qw7lksb6vhj2j6jxe" aria-label="Buy from Google Play Music"><i class="fab fa-google-play"></i></a>
+          <a href="https://open.spotify.com/album/67rJAAmIDzCtlcwZ4UwYx4" aria-label="Buy from Spotify"><i class="fab fa-spotify"></i></a>
+          <a href="https://pandora.com" aria-label="Buy from Pandora"><i class="icon-pandora"></i></a>
+          <a href="https://smile.amazon.com/Reentry-Inward-Spiral/dp/B07MJHJL4H/" aria-label="Buy from Amazon"><i class="fab fa-amazon"></i></a>
         </div>
       </div>
 
       <div class="footer">
         &copy; 2019 Dave Gammage
-        <a href="https://github.com/omfgtora"> <div class="❤️">Website made with ❤️</div> </a>
+        <a href="https://github.com/omfgtora" name="Website creator"> <div class="❤️">Website made with ❤️</div> </a>
       </div>
-    </div>
+    </main>
 
-    <script src="assets/js/scripts.js" async defer></script>
+    <script src="assets/js/scripts.js"></script>
   </body>
 </html>
