--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>The Inward Spiral</title>
     <meta name="description" content="The official homepage for The Inward Spiral - Music by Dave Gammage - Genres: Chill, Downtempo, Ambient">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="assets/css/styles.css" defer>
-    <link rel="stylesheet" href="assets/icomoon/style.css" defer>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" defer>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/icomoon/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   </head>
 
   <body>
