--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>The Inward Spiral</title>
+    <meta charset="utf-8">
+    <meta name="robots" content="index,follow">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="description" content="The official homepage for The Inward Spiral - Music by Dave Gammage - Genres: Chill, Downtempo, Ambient">
+    <meta name="keywords" content="music,the inward spiral,inward spiral,the inward spiral music,reentry,Dave Gammage,chill,downtempo,ambient,album,reentry album,reconnection,inertia,muscle memory,tunnel vision,no direction,cycles,from all angles,spread,the plateau,nature of a circle,dreamstate,conception,a choice to remain,choice to remain">
+    <meta name="author" content="Dave Gammage,Ethan Roberts">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/icomoon/style.css">
