Added alt text to img. Changed js filename.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header class="header">
-      <div class="header-image"><img src="assets/images/bio-square.jpg" /></div>
+      <div class="header-image"><img src="assets/images/bio-square.jpg" alt="Band Members: Dave Gammage, Tippy the cat" /></div>
 
       <div class="title">The Inward Spiral</div>
 
@@ -57,6 +57,6 @@
       </div>
     </main>
 
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/index.js"></script>
   </body>
 </html>
