Added soundcloud. Changed links to artist page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
       <div class="social">
         <a href="https://facebook.com/theinwardspiral" aria-label="Facebook link"><div class="social-icon"><i class="fab fa-facebook-f fa-2x"></i></div></a>
+        <a href="https://www.instagram.com/theinwardspiral/" aria-label="Instagram link"><div class="social-icon"><i class="fab fa-instagram fa-2x"></i></div></a>
         <a href="https://twitter.com/spiral_inward" aria-label="Twitter link"><div class="social-icon"><i class="fab fa-twitter fa-2x"></i></div></a>
         <a href="https://www.youtube.com/channel/UC_yZofN6BM5xsoHaVxQ-QFQ" aria-label="YouTube link"><div class="social-icon"><i class="fab fa-youtube fa-2x"></i></div></a>
       </div>
@@ -43,11 +44,11 @@
         </div>
 
         <div class="links">
-          <a href="https://itunes.apple.com/us/album/reentry/1449060964" alt="Apple Music" aria-label="Buy from Apple Music"><i class="fab fa-apple"></i></a>
-          <a href="https://play.google.com/store/music/album/The_Inward_Spiral_Reentry?id=Bf5yyitok5qw7lksb6vhj2j6jxe" aria-label="Buy from Google Play Music"><i class="fab fa-google-play"></i></a>
-          <a href="https://open.spotify.com/album/67rJAAmIDzCtlcwZ4UwYx4" aria-label="Buy from Spotify"><i class="fab fa-spotify"></i></a>
-          <a href="https://pandora.com" aria-label="Buy from Pandora"><i class="icon-pandora"></i></a>
+          <a href="https://itunes.apple.com/us/artist/the-inward-spiral/1449060965" alt="Apple Music" aria-label="Buy from Apple Music"><i class="fab fa-apple"></i></a>
+          <a href="https://play.google.com/store/music/artist?id=Akaiif6etszzgsjiph6sg2vp4xy" aria-label="Buy from Google Play Music"><i class="fab fa-google-play"></i></a>
+          <a href="https://open.spotify.com/artist/5jQUDLYSPps0B66nLConyq?si=wwx6VrL3R9SAGcSDksfocA" aria-label="Buy from Spotify"><i class="fab fa-spotify"></i></a>
           <a href="https://smile.amazon.com/Reentry-Inward-Spiral/dp/B07MJHJL4H/" aria-label="Buy from Amazon"><i class="fab fa-amazon"></i></a>
+          <a href="https://soundcloud.com/dave-gammage" aria-label="Listen on Soundcloud"><i class="fab fa-soundcloud"></i></a>
         </div>
       </div>
 
