Updated amazon link to artist page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="https://itunes.apple.com/us/artist/the-inward-spiral/1449060965" alt="Apple Music" aria-label="Buy from Apple Music"><i class="fab fa-apple"></i></a>
           <a href="https://play.google.com/store/music/artist?id=Akaiif6etszzgsjiph6sg2vp4xy" aria-label="Buy from Google Play Music"><i class="fab fa-google-play"></i></a>
           <a href="https://open.spotify.com/artist/5jQUDLYSPps0B66nLConyq?si=wwx6VrL3R9SAGcSDksfocA" aria-label="Buy from Spotify"><i class="fab fa-spotify"></i></a>
-          <a href="https://smile.amazon.com/Reentry-Inward-Spiral/dp/B07MJHJL4H/" aria-label="Buy from Amazon"><i class="fab fa-amazon"></i></a>
+          <a href="https://music.amazon.com/artists/B07MFW8ZZN?ref=dm_sh_XDddoNWiT8vMgMXdRIOSJ6JCh" aria-label="Buy from Amazon"><i class="fab fa-amazon"></i></a>
           <a href="https://soundcloud.com/dave-gammage" aria-label="Listen on Soundcloud"><i class="fab fa-soundcloud"></i></a>
         </div>
       </div>
