--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header class="header">
-      <div class="header-image"><img src="assets/images/JULYEP.png" alt="The Inward Spiral" /></div>
+      <div class="header-image"><img src="assets/images/JULYEP_xsm.png" alt="The Inward Spiral" /></div>
 
       <div class="title">The Inward Spiral</div>
 
