--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="The official homepage for The Inward Spiral - Music by Dave Gammage - Genres: Chill, Downtempo, Ambient">
     <meta name="keywords" content="music,the inward spiral,inward spiral,the inward spiral music,reentry,Dave Gammage,chill,downtempo,ambient,album,reentry album,reconnection,inertia,muscle memory,tunnel vision,no direction,cycles,from all angles,spread,the plateau,nature of a circle,dreamstate,conception,a choice to remain,choice to remain">
-    <meta name="author" content="Dave Gammage,Ethan Roberts">
+    <meta name="author" content="Dave Gammage">
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
