Change bg image, add meta tags, add analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Primary Meta Tags -->
     <title>The Inward Spiral</title>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The official homepage for The Inward Spiral - Music by Dave Gammage - Genres: Chill, Downtempo, Ambient">
+    <meta name="description" content="The official homepage for The Inward Spiral - Music by Dave Gammage | Genres: Chill, Downtempo, Ambient">
     <meta name="keywords" content="music,the inward spiral,inward spiral,the inward spiral music,reentry,Dave Gammage,chill,downtempo,ambient,album,reentry album,reconnection,inertia,muscle memory,tunnel vision,no direction,cycles,from all angles,spread,the plateau,nature of a circle,dreamstate,conception,a choice to remain,choice to remain">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://theinwardspiralmusic.com/">
+    <meta property="og:title" content="The Inward Spiral">
+    <meta property="og:description" content="The official homepage for The Inward Spiral - Music by Dave Gammage | Genres: Chill, Downtempo, Ambient">
+    <meta property="og:image" content="/assets/images/strange_comfort_album.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://theinwardspiralmusic.com/">
+    <meta property="twitter:title" content="The Inward Spiral">
+    <meta property="twitter:description" content="The official homepage for The Inward Spiral - Music by Dave Gammage | Genres: Chill, Downtempo, Ambient">
+    <meta property="twitter:image" content="">
     <meta name="author" content="Dave Gammage">
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-78559524-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-78559524-2');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
