Change bg image, add meta tags, add analytics

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <meta property="twitter:description" content="The official homepage for The Inward Spiral - Music by Dave Gammage | Genres: Chill, Downtempo, Ambient">
     <meta property="twitter:image" content="">
     <meta name="author" content="Dave Gammage">
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-78559524-2"></script>
